# ucp-example-server

./: .gitignore  README.md  pyproject.toml  wrangler.toml
migrations/: 0001_schema.sql  0002_seed.sql  0003_catalog.sql  0004_carts.sql  0005_product_options.sql
scripts/spec_validation/: README.md  fetch_spec.py  http_client.py  report.py  run_all.py  validate_cart.py  validate_catalog.py  validate_checkout.py  validate_discovery.py  validator.py
scripts/spec_validation/spec/: VERSION
scripts/spec_validation/spec/source/schemas/shopping/: catalog_lookup.json
scripts/spec_validation/spec/source/schemas/shopping/types/: error_code.json
scripts/spec_validation/spec/source/services/shopping/: embedded.openrpc.json
src/: app.py  db.py  entry.py  enums.py  exceptions.py  models.py
src/routes/: cart.py  catalog.py  checkout.py  discovery.py  home.py  platform.py
src/services/: cart_service.py  checkout_service.py  fulfillment_service.py
tests/: test_cart_checkout_spec.py  test_catalog_spec.py  test_fulfillment_order_routes_spec.py  test_spec_compliance.py  test_totals_discount_spec.py
